2A/05_Projet_GL/src/test/deca/codegen/valid/SansObjet/01_print_str.deca
// Description:
//    Programme avec affichage de string
// Resultats:
//    OKOK
//    OKOK
//
// Historique:
//    cree le 10/1/2024

{
    print("OK");
    println("OK");
    printx("OK");
    printlnx("OK");
}