2A/05_Projet_GL/src/test/deca/codegen/invalid/sansObjet/01_var_non_init.deca
// Description:
//    Programme avec accès à une variable non initialiser
// Resultats:
//    WINT avec RX indefini
//
// Historique:
//    cree le 10/1/2024

{
    int x;
    println(x);
}